# imagineit

./: .beamignore  .gitignore  Caddyfile  MANIFEST.in  inference.py  pyproject.toml  readme.md  run.py
imagineit_app/: app.py  dataio.py  encryption.py  imdb.py  imdbv3.py  inference.py  main.py  modal_client.py  modal_test.py  serverless.py  serverless_modal.py  zrok.py
imagineit_app/resources/: __init__.py  image.py  metadata.py  model.py
imagineit_app/static/: App.tsx  constants.ts  index.html  metadata.json  package-lock.json  package.json  types.ts  vite.config.ts
imagineit_app/static/components/: ExportView.tsx  Header.tsx  ImageControls.tsx  ImageDisplay.tsx  LabelingView.tsx  LoadingSpinner.tsx  Tabs.tsx  TrainView.tsx
imagineit_app/static/services/: geminiService.ts
imagineit_app/static/utils/: cookies.ts
imagineit_app/webui/: App.tsx  README.md  constants.ts  metadata.json  package.json
imagineit_app/webui/components/: ErrorDisplay.tsx  Header.tsx  ImageControls.tsx  ImageDisplay.tsx  Tabs.tsx
imagineit_app/webui/services/: geminiService.tsx
imagineit_app/webui/src/: App.tsx
imagineit_app/webui/src/components/: ImageControls.tsx
